# mt_code

./: README.md
src/: CMakeLists.txt  README.md  main.cpp  svn-commit.tmp
src/CommonIncludes/Shared/: CameraDefines.h  DataCollectionConfig.h  DynamicExtrinsicConfig.h  InterfaceConfig.h  ModelsConfig.h  OSDefines.h  Presets.h  SharedStructs.h  SystemConfig.h  TrackingConfig.h
src/Config/: DataCollectionConfig.json  DynamicExtrinsicsConfig.json  InterfaceConfig.json  ModelsConfig.json  SystemConfig.json  TrackingConfig.json
src/Config/CameraIntrinsics/: README.txt
src/Config/DynamicExtrinsics/: README.txt
src/DataCollection/: CMakeLists.txt  EstimatePoseCharucoBoard.cpp  EstimatePoseCharucoBoard.h  main.cpp
src/DataCollection/CollectionGenerator/: CollectionGenerator.cpp  CollectionGenerator.h
src/DataCollection/ConfigParser/: DataCollectionJSONParser.cpp  DataCollectionJSONParser.h
src/DataCollection/DataCollector/: DataCollector.cpp  DataCollector.h
src/DynamicExtrinsics/: CMakeLists.txt  README.md
src/DynamicExtrinsics/ConfigParser/: DynamicExtrinsicsJSONParser.cpp  DynamicExtrinsicsJSONParser.h
src/DynamicExtrinsics/Examples/: main.cpp
src/DynamicExtrinsics/Extrinsics/: ModelError.h  ModelFit.h
src/DynamicExtrinsics/Model/: PanTiltModel.h  Preprocess.h  Transformations.h
src/DynamicIntrinsics/: CMakeLists.txt  main.cpp  mainOld.cpp
src/LearnedAF/: CMakeLists.txt  README.txt  main.cpp
src/LiMeInterface/: CMakeLists.txt
src/LiMeInterface/ConfigParser/: InterfaceJSONParser.cpp  InterfaceJSONParser.h
src/LiMeInterface/Network/: ConnectionInterface.h  Network.cpp  Network.h  Tools.h
src/LiMeInterface/PhotoAlbum/: PhotoAlbum.cpp  PhotoAlbum.h
src/Models/: CMakeLists.txt
src/Models/Board/: FiducialModel.cpp  FiducialModel.h  FiducialModel.h.bak
src/Models/Camera/: CameraModel.h
src/Models/ConfigParser/: ModelsJSONParser.cpp  ModelsJSONParser.h
src/Models/PT/: PTModelInterface.h
src/PoseEstimation/: CMakeLists.txt  PoseEstimator.cpp  PoseEstimator.h  README.txt  SixDOF.cpp  SixDOF.h
src/PoseEstimation/FusedPoses/: FusedPoses.cpp  FusedPoses.h
src/PoseEstimation/HandOffSolver/: HandOffSolver.cpp  HandOffSolver.h
src/TrackingFiducial/: CMakeLists.txt  FTVideoObject.cpp  FTVideoObject.h  FiducialTracker.cpp  FiducialTracker.h  README.txt  count_marker_detections.sh  main.cpp  output_gt.txt  plot_3d_tracks.py
src/TrackingFiducial/ConfigParser/: TrackingJSONParser.cpp  TrackingJSONParser.h
src/Utilities/: CMakeLists.txt
src/Utilities/ErrorHandler/: ErrorHandler.cpp  ErrorHandler.h
src/Utilities/H5/: H5Parser.h
src/Utilities/JSONParser/: JSONParser.cpp  JSONParser.h
src/Utilities/Logger/: Logger.cpp  Logger.h
src/Utilities/Matrix/: Matrix3d.h
src/Utilities/SystemConfigParser/: SystemJSONParser.cpp  SystemJSONParser.h
src/Utilities/ThreadInterface/: ConfigInterface.h  ThreadInterface.cpp  ThreadInterface.h
src/build-debug-lime1/: CMakeCache.txt  HRLDemoApp.cbp  LiveMetrology.cbp  Makefile  cmake_install.cmake
src/build-debug-lime1/DataCollection/: DataCollection.cbp  Makefile  cmake_install.cmake
src/build-debug-lime1/DynamicExtrinsics/: DynamicExtrinsics.cbp  Makefile
src/build-debug-lime1/LiMeInterface/: LiMeInterface.cbp  Makefile  cmake_install.cmake
src/build-debug-lime1/Models/: Makefile  Models.cbp
src/build-debug-lime1/PoseEstimation/: Makefile  PoseEstimation.cbp
src/build-debug-lime1/TrackingFiducial/: Makefile  TrackingFiducial.cbp
src/build-debug-lime1/Utilities/: Makefile  Utilities.cbp
src/build-debug-lime2/: CMakeCache.txt  HRLDemoApp.cbp  LiveMetrology.cbp  Makefile  cmake_install.cmake
src/build-debug-lime2/DataCollection/: DataCollection.cbp  Makefile
src/build-debug-lime2/DynamicExtrinsics/: DynamicExtrinsics.cbp  Makefile
src/build-debug-lime2/LiMeInterface/: LiMeInterface.cbp  Makefile
src/build-debug-lime2/Models/: Makefile  Models.cbp
src/build-debug-lime2/PoseEstimation/: Makefile  PoseEstimation.cbp
src/build-debug-lime2/TrackingFiducial/: Makefile  TrackingFiducial.cbp  trackfiducial.cbp
src/build-debug-lime2/Utilities/: Makefile  Utilities.cbp
src/build-lime2-release/: CMakeCache.txt  LiveMetrology.cbp  Makefile  cmake_install.cmake
src/build-lime2-release/DataCollection/: DataCollection.cbp  Makefile  cmake_install.cmake
src/build-lime2-release/DynamicExtrinsics/: DynamicExtrinsics.cbp  Makefile  cmake_install.cmake
src/build-lime2-release/LiMeInterface/: LiMeInterface.cbp  Makefile  cmake_install.cmake
src/build-lime2-release/Models/: Makefile  Models.cbp  cmake_install.cmake
src/build-lime2-release/PoseEstimation/: Makefile  PoseEstimation.cbp  cmake_install.cmake
src/build-lime2-release/TrackingFiducial/: Makefile  trackfiducial.cbp
src/build-lime2-release/Utilities/: Makefile  Utilities.cbp
src/build-release-lime1/: CMakeCache.txt  HRLDemoApp.cbp  LiveMetrology.cbp  Makefile  cmake_install.cmake
src/build-release-lime1/DataCollection/: DataCollection.cbp  Makefile
src/build-release-lime1/DynamicExtrinsics/: DynamicExtrinsics.cbp  Makefile
src/build-release-lime1/LiMeInterface/: LiMeInterface.cbp  Makefile
src/build-release-lime1/Models/: Makefile  Models.cbp
src/build-release-lime1/PoseEstimation/: Makefile  PoseEstimation.cbp
src/build-release-lime1/TrackingFiducial/: Makefile  TrackingFiducial.cbp
src/build-release-lime1/Utilities/: Makefile  Utilities.cbp
src/build-release-lime2/: CMakeCache.txt  HRLDemoApp.cbp  LiveMetrology.cbp  Makefile  cmake_install.cmake
src/build-release-lime2/DataCollection/: DataCollection.cbp  Makefile
src/build-release-lime2/DynamicExtrinsics/: DynamicExtrinsics.cbp  Makefile
src/build-release-lime2/LiMeInterface/: LiMeInterface.cbp  Makefile
src/build-stand-alone/: CMakeCache.txt  Makefile  cmake_install.cmake
src/build-test/: CMakeCache.txt  Makefile  cmake_install.cmake
src/cmake/: FindCppNpy.cmake  FindHDF5.cmake.bak  FindImperX.cmake  FindLBFGSpp.cmake  FindXimea.cmake  Functions.cmake
src/debug-lime2/: CMakeCache.txt  LiveMetrology.cbp  Makefile  cmake_install.cmake
(+619 files in other folders)
